v0.3.1/_sources/gallery/lines/line_custom_cpt.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines/line_custom_cpt.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_lines_line_custom_cpt.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_line_custom_cpt.py:


Line colors with a custom CPT
-----------------------------

The color of the lines made by :meth:`pygmt.Figure.plot` can be set according to a
custom CPT and assigned with the ``pen`` parameter.

The custom CPT can be used by setting the plot command's ``cmap`` parameter to
``True``. The ``zvalue`` parameter sets the z-value (color) to be used from the custom
CPT, and the line color is set as the z-value by using **+z** when setting the ``pen``
color.

.. GENERATED FROM PYTHON SOURCE LINES 14-34



.. image:: /gallery/lines/images/sphx_glr_line_custom_cpt_001.png
    :alt: line custom cpt
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|

.. code-block:: default


    import numpy as np
    import pygmt

    # Create a list of values between 20 and 30 with at 0.2 intervals
    x = np.arange(start=20, stop=30, step=0.2)

    fig = pygmt.Figure()
    fig.basemap(frame=["WSne", "af"], region=[20, 30, -10, 10])

    # Create a custom CPT with the batlow CPT and 10 discrete z-values (colors)
    pygmt.makecpt(cmap="batlow", series=[0, 10, 1])

    # Plot 10 lines and set a different z-value for each line
    for zvalue in range(0, 10):
        y = zvalue * np.sin(x)
        fig.plot(x=x, y=y, cmap=True, zvalue=zvalue, pen="thick,+z,-")
    # Color bar to show the custom CPT and the associated z-values
    fig.colorbar()
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  3.042 seconds)


.. _sphx_glr_download_gallery_lines_line_custom_cpt.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: line_custom_cpt.py <line_custom_cpt.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: line_custom_cpt.ipynb <line_custom_cpt.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
